--- a/src/components/UISamples/DashboardsPreview/DashboardPreview.scss
+++ b/src/components/UISamples/DashboardsPreview/DashboardPreview.scss
@@ -13,14 +13,6 @@ $block: '.#{variables.$ns}dashboards-preview';
     }
 
     &__dashboard-wrapper {
-        height: 230px;
-
-        &_s {
-            width: 280px;
-        }
-
-        &_m {
-            width: 450px;
-        }
+        overflow: hidden;
     }
 }
